--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
                 <button class="btn btn-ruble" id="startSellingBtn">
                     <i class="fas fa-upload"></i>
                     Начать продавать
+                <!-- В разделе hero после кнопки "Начать продавать" -->
+<div class="stats-grid">
+    <div class="stat-card">
+        <div class="stat-icon">
+            <i class="fas fa-images"></i>
+        </div>
+        <div class="stat-title">Ваши фотографии</div>
+        <div class="stat-value" id="userPhotosCount">0</div>
+    </div>
+    
+    <div class="stat-card">
+        <div class="stat-icon">
+            <i class="fas fa-ruble-sign"></i>
+        </div>
+        <div class="stat-title">Ваш баланс</div>
+        <div class="stat-value" id="userBalanceValue">0 ₽</div>
+    </div>
+</div>
                 </button>
             </section>
             
